# GCode

./: .env.example  .gitignore  README.md  pyproject.toml
gcode/: __init__.py  __main__.py  agent.py  cli.py  errors.py  history.py  models.py  tools.py  ui.py
tests/: test_errors.py  test_tools.py
