[project]
name = "gcode"
version = "0.1.0"
description = "GCode — a local, interactive AI coding CLI."
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.0",
    "rich>=13.0",
]

[project.scripts]
gcode = "gcode.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcode*"]
